--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "lms",
+  "name": "cms",
   "version": "0.1.0",
   "dependencies": {
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
     "react-scripts": "4.0.3"
   },
   "scripts": {
